--- a/appdata/index.html
+++ b/appdata/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyQt6 WebView App</title>
+    <title>Serverless Desktop Python v0.1</title>
     <link rel="stylesheet" href="assets/styles.css">
     <!-- Include the QWebChannel script -->
     <script src="qwebchannel.js"></script>
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>PyQt6 WebView with QtChannel</h1>
-        <p>This is a basic example of using PyQt6 WebView with QtChannel for Python/JS communication.</p>
+        <p>This is a basic example of using PyQt6 WebView with QtChannel for Python/JS communication. It also uses an external JSON file for storing the Python bridge methods.</p>
         
         <button id="callPythonBtn">Call Python Function</button>
         <button id="showDialogBtn">Show Python Dialog</button>
